# DD2421-PhD-Task

./: .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: jupyter-ci.yml
dataset/: sb-heists_encoded_data.csv  sb-heists_test_data.csv  sb-heists_train_data.csv  sb-heists_vulnerable_exploitable_label.json  smartbugs-curated_encoded_data.csv  smartbugs-curated_final_data.json  smartbugs-curated_test_data.csv  smartbugs-curated_train_data.csv  smartbugs-curated_vulnerable_lines.json
notebooks/: data-processor.ipynb  labfuns.py  models.py  vulnerability_classifier.ipynb
